[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
warp = "*"
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
redis = { version = "*", features = ["tokio-comp", "aio", "connection-manager"] }
tokio-rustls = "*"
rustls = { version = "*", features = ["aws_lc_rs"] }
rustls-pemfile = "*"
tokio-stream = { version = "*", features = ["sync"] }
bitvec = "*"
log = "*"
env_logger = "*"
console-subscriber = "*"
crossbeam = "*"
worker-kv = "*"

[features]
default = ["rt-multi-thread"]
rt-multi-thread = ["tokio/rt-multi-thread"]
